# seq-finder

./: Cargo.toml  README.md  seq-finder.conf
.github/workflows/: release.yml  test.yml
src/: cli.rs  finder.rs  main.rs
