[package]
name = "seq-finder"
version = "0.1.0"
authors = ["Heru Handika <herubiolog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
regex = "1.4.5"
lazy_static = "1.4.0"
clap = "2.33.3"